// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CorrectResponse renders snapshot 1`] = `
<div>
  Define Correct Response
  <Tools
    classes={Object {}}
    toggleToolBarTool={[Function]}
    toolbarTools={
      Array [
        "circle",
        "line",
        "label",
        "parabola",
        "point",
        "polygon",
        "ray",
        "segment",
        "sine",
        "vector",
      ]
    }
  />
  <div>
    <div
      onClick={[Function]}
    >
      ADD ALTERNATE
    </div>
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`CorrectResponse: if answers is null it should still work as expected renders snapshot 1`] = `
<div>
  Define Correct Response
  <Tools
    classes={Object {}}
    toggleToolBarTool={[Function]}
    toolbarTools={Array []}
  />
  <div>
    <div
      onClick={[Function]}
    >
      ADD ALTERNATE
    </div>
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`CorrectResponse: if answers is undefined it should still work as expected renders snapshot 1`] = `
<div>
  Define Correct Response
  <Tools
    classes={Object {}}
    toggleToolBarTool={[Function]}
    toolbarTools={Array []}
  />
  <div>
    <div
      onClick={[Function]}
    >
      ADD ALTERNATE
    </div>
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`Tools renders snapshot 1`] = `
<div>
  GRAPHING TOOLS
  <div />
</div>
`;
